# noderole

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  shell.nix
.github/workflows/: ci.yml  pre-commit.yml  release.yml
src/: main.rs
