[package]
name = "noderole"
version = "0.1.0"
description = "Assign roles/labels to kubernetes nodes"
edition = "2021"
authors = [
  "Daniel Malon <MerlinDMC@me.com>"
]
license = "Apache-2.0/MIT"
repository = "https://github.com/MerlinDMC/noderole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive", "env", "cargo"] }
figment = { version = "0.10.6", features = ["yaml"] }
kube = { version = "0.67.0", features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
serde = { version = "1.0.136" }
tokio = { version = "1.16.1", features = ["full"] }
