[package]
name = "noderole"
version = "0.4.0"
description = "Assign roles/labels to kubernetes nodes"
edition = "2021"
authors = [
  "Daniel Malon <MerlinDMC@me.com>"
]
license = "Apache-2.0/MIT"
repository = "https://github.com/MerlinDMC/noderole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "env", "cargo"] }
figment = { version = "0.10", features = ["yaml"] }
kube = { version = "0.77", features = ["client"] }
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
serde = { version = "1.0" }
tokio = { version = "1.23", features = ["full"] }

openssl = { version = "0.10", features = ["vendored"] }
